--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ geopy == 2.4.1
 streamlit-folium==0.5.0
 folium==0.13.0
 yfinance==0.2.38
-requests==2.26.0
+requests>=2.27
 pytz==2024.1
 googletrans==3.1.0a0
